--- a/package.json
+++ b/package.json
@@ -9,17 +9,19 @@
   "author": "jdbool",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
     "express": "^4.17.1",
     "express-basic-auth": "^1.2.0",
     "express-fileupload": "^1.1.5",
     "express-handlebars": "^3.1.0",
     "express-rate-limit": "^5.0.0",
+    "express-validator": "^6.3.0",
     "hasha": "^5.1.0",
+    "log-symbols": "^3.0.0",
+    "mongoose": "^5.8.1",
     "prettysize": "^2.0.0",
     "randomstring": "^1.1.5",
-    "send": "^0.17.1",
-    "sequelize": "^5.15.1",
-    "sqlite3": "^4.1.0"
+    "send": "^0.17.1"
   }
 }
